fix error and edit some files
