# swagger-output.json
@@ -264,35 +264,43 @@
         }
       }
     },
-    "/delete_interface_by_id/{id}": {
+    "/delete_interface_by_id": {
       "delete": {
         "description": "",
         "parameters": [
           {
             "name": "token",
             "in": "header",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
           "default": {
             "description": ""
           }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "id"
+                ],
+                "properties": {
+                  "id": {
+                    "type": "integer",
+                    "description": "معرّف الواجهة المراد حذفها"
+                  }
+                }
+              }
+            }
+          }
         }
       }
     },
-    "/delete_list_by_id/{tablename}/{id}": {
+    "/delete_list_by_id/{tablename}": {
       "delete": {
         "description": "",
         "parameters": [
@@ -311,52 +319,71 @@
             "schema": {
               "type": "string"
             }
-          },
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
           "default": {
             "description": ""
           }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "id"
+                ],
+                "properties": {
+                  "id": {
+                    "type": "integer",
+                    "description": "معرّف السجل المراد حذفه"
+                  }
+                }
+              }
+            }
+          }
         }
       }
     },
-    "/delete_premission_by_id/{id}": {
+    "/delete_premission_by_id": {
       "delete": {
         "description": "",
         "parameters": [
           {
             "name": "token",
             "in": "header",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
           "default": {
             "description": ""
           }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "id"
+                ],
+                "properties": {
+                  "id": {
+                    "type": "integer",
+                    "description": "معرّف الصلاحية المراد حذفها"
+                  }
+                }
+              }
+            }
+          }
         }
       }
     },
-    "/delete_premission/{user_type_id}/{interface_id}": {
+    "/delete_premission/{user_type_id}": {
       "delete": {
         "description": "",
         "parameters": [
@@ -375,19 +402,30 @@
             "schema": {
               "type": "string"
             }
-          },
-          {
-            "name": "interface_id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
           "default": {
             "description": ""
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "interface_id"
+                ],
+                "properties": {
+                  "interface_id": {
+                    "type": "integer",
+                    "description": "معرّف الواجهة المراد حذف صلاحيتها"
+                  }
+                }
+              }
+            }
           }
         }
       }
